--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,10 @@
         "enrich": "Enrich",
         "enrichHint": "Apply Foundry Enricher (links, embeds, etc.)",
         "removeLinks": "Remove links",
-        "removeLinksHint": "Remove all links from the export.",
+        "removeLinksHint": "Remove, convert or keep all links from the export.",
+        "convertLinks": "Convert links",
+        "keepLinks": "Keep links",
+        "linkHandling": "Link handling",
         "note": "Large compendiums may take a while for PDF, please be patient."
     }
 }
