--- a/lang/de.json
+++ b/lang/de.json
@@ -9,7 +9,7 @@
         "convertLinks": "Links konvertieren",
         "keepLinks": "Links behalten",
         "linkHandling": "Linkbehandlung",
-        "note": "Große Kompendien können bei PDF eine Weile dauern, Geduld bitte.",
+        "note": "Große Kompendien können bei PDF eine Weile dauern, Geduld bitte. (PDF Export ist experimentell)",
         "withImages": "Mit Bildern",
         "withImagesHint": "Bilder in den Export einfügen (nur Markdown)"
     }
